<resources>
    <string name="app_name">TechnicalTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_name">Hi, Bagus</string>
    <string name="todo">todo</string>
    <string name="cari_klinik_rumah_sakit">Cari Klinik / Rumah Sakit</string>
    <string name="info_antrian">INFO ANTRIAN</string>
    <string name="_70">70</string>
    <string name="nomor_antrian">Nomor Antrian</string>
    <string name="_5">5</string>
    <string name="sisa_antrian">Sisa Antrian</string>
    <string name="dokter_anda">Dokter Anda</string>
    <string name="dr_rina_agustina">dr. Rina Agustina</string>
    <string name="rs_national_hospital">RS. National Hospital</string>
    <string name="title_berita">Berita</string>
</resources>