<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.screen.HomeFragment"
        >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hi_name"
                    app:layout_constraintTop_toTopOf="@+id/imageView"
                    android:fontFamily="@font/rubik"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintEnd_toStartOf="@+id/imageView"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/textView"
                    />

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/user"
                    android:contentDescription="@string/todo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:id="@+id/imageView"
                    />

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_search"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    android:hint="@string/cari_klinik_rumah_sakit"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:id="@+id/textInputEditText"
                    />

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/textInputEditText"
                    app:layout_constraintStart_toStartOf="@+id/textInputEditText"
                    app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/gradient_background_home"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintVertical_bias="0.0"
                    android:id="@+id/constraintLayout"
                    >

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_antrian"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:id="@+id/textView2"
                        />

                <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView2"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:background="@color/white"
                        android:id="@+id/view"
                        />

                <ProgressBar
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        style="@style/CircularDeterminateProgressBar"
                        app:layout_constraintTop_toBottomOf="@+id/view"
                        app:layout_constraintStart_toStartOf="@+id/textView2"
                        android:layout_marginTop="16dp"
                        android:progress="70"
                        android:id="@+id/circularProgressIndicator"
                        app:layout_constraintEnd_toStartOf="@+id/circularProgressIndicator2"
                        app:layout_constraintBottom_toTopOf="@+id/textView5"
                        />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_70"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/circularProgressIndicator"
                        app:layout_constraintStart_toStartOf="@+id/circularProgressIndicator"
                        app:layout_constraintBottom_toBottomOf="@+id/circularProgressIndicator"
                        app:layout_constraintTop_toTopOf="@+id/circularProgressIndicator"
                        android:id="@+id/textView3"
                        />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/nomor_antrian"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        app:layout_constraintTop_toBottomOf="@+id/circularProgressIndicator"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="@+id/circularProgressIndicator"
                        android:id="@+id/textView5"
                        android:textSize="9sp"
                        app:layout_constraintStart_toStartOf="@+id/circularProgressIndicator"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="16dp"
                        />

                <ProgressBar
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        style="@style/CircularDeterminateProgressBar"
                        android:progress="5"
                        app:layout_constraintStart_toEndOf="@+id/circularProgressIndicator"
                        app:layout_constraintTop_toTopOf="@+id/circularProgressIndicator"
                        android:id="@+id/circularProgressIndicator2"
                        android:layout_marginStart="8dp"
                        />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_5"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/circularProgressIndicator2"
                        app:layout_constraintStart_toStartOf="@+id/circularProgressIndicator2"
                        app:layout_constraintBottom_toBottomOf="@+id/circularProgressIndicator2"
                        app:layout_constraintTop_toTopOf="@+id/circularProgressIndicator2"
                        android:id="@+id/textView4"
                        />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sisa_antrian"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textSize="9sp"
                        app:layout_constraintEnd_toEndOf="@+id/circularProgressIndicator2"
                        app:layout_constraintStart_toStartOf="@+id/circularProgressIndicator2"
                        android:id="@+id/textView8"
                        app:layout_constraintBottom_toBottomOf="@+id/textView5"
                        />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dokter_anda"
                        android:textStyle="bold"
                        android:textColor="@color/techYellow"
                        app:layout_constraintTop_toTopOf="@+id/circularProgressIndicator2"
                        app:layout_constraintStart_toEndOf="@+id/circularProgressIndicator2"
                        android:layout_marginStart="8dp"
                        android:id="@+id/textView6"
                        />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/dr_rina_agustina"
                        android:textSize="9sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        app:layout_constraintTop_toBottomOf="@+id/textView6"
                        app:layout_constraintStart_toStartOf="@+id/textView6"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:id="@+id/textView7"
                        />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Klinik / RS anda"
                        android:textStyle="bold"
                        android:textColor="@color/techYellow"
                        app:layout_constraintTop_toBottomOf="@+id/textView7"
                        app:layout_constraintStart_toStartOf="@+id/textView7"
                        android:layout_marginTop="16dp"
                        android:id="@+id/textView10"
                        />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/rs_national_hospital"
                        android:textColor="@color/white"
                        android:textSize="9sp"
                        app:layout_constraintTop_toBottomOf="@+id/textView10"
                        app:layout_constraintStart_toStartOf="@+id/textView10"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_rv_menu"
                    app:spanCount="3"
                    tools:itemCount="3"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                    app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                    android:layout_marginTop="16dp"
                    />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/white">

            <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPager"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    />

            <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="bottom"
                    android:background="@android:color/transparent"
                    app:tabBackground="@drawable/tab_pager_selector"
                    app:tabIndicatorHeight="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/viewPager"
                    />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>